Rollergames (LF-2 French)
Rollergames (LF-3 French)
Spring Break (Free Play)
Spring Break (French)
Spring Break (French Free Play)
Spring Break (German)
Spring Break (German Free Play)
Spring Break (rev. 1 Free Play)
Spring Break (single ball game, Free Play)
Tag-Team Pinball (Free Play)
Tag-Team Pinball (German)
Tag-Team Pinball (German Free Play)
Tag-Team Pinball (rev.2 Free Play)
TX-Sector (Free Play)
TX-Sector (French)
TX-Sector (French Free Play)
TX-Sector (German)
TX-Sector (German Free Play)
U.S.A. Football (R01u)
Victory (Free Play)
Victory (French)
Victory (French Free Play)
Victory (German)
Victory (German Free Play)
Zephy (alternate set)



Version 2.8b (December 29th, 2016)
------------------------------------------------------------------------------

*** CORE/CPU ***
Optimize general sound resampling code
Expose new option "resampling_quality" to choose between fast/low quality (mode 0) and normal (mode 1)



Version 2.8 (December 24th, 2016) - "Sounds good"
------------------------------------------------------------------------------

*** CORE/CPU *** Thanks to DJRobX and lucky1 and mjr for some of these
Improve precision/performance of general sound filtering and resampling to final output sample rate (latter using libsamplerate by Erik de Castro Lopo now)
Improve sound pitch for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
Further improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
Further improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
 but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar, or even ~20 on LOTR)
Improved AT91 core emulation features
 and add 'at91jit' option to disable it